# tokenization-efficiency-benchmark

./: .gitignore  README.md  main.py  pyproject.toml
models/: __init__.py  transformer_model.py
results/: forum_forum_poradnikogrodniczy_pl_corpus_gpt2_gpt2_transformer_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_sentencepiece_sentencepiece_transformer_metrics.json  forum_forum_poradnikogrodniczy_pl_corpus_whitespace_whitespace_transformer_metrics.json  qualitative_analysis.txt  tokenizer_comparison_results.json
scripts/: compare_tokenizers.py  compare_tokenizers_evaluation.py  evaluate.py  generate.py  generate_final_report.py  preprocess_data.py  qualitative_analysis.py  train.py  visualize_metrics.py
utils/: config.py  tokenizer_factory.py
